mash/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cool-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - cool-gateway
  http:
    - match:
        - uri:
            exact: /log
          method:
            exact: POST
      fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 2s
      timeout: 1s
      retries:
        attempts: 2
        perTryTimeout: 1s
      route:
        - destination:
            host: service-lol
            port:
              number: 80
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: service-lol
            port:
              number: 80

    - match:
        - uri:
            exact: /status
      route:
        - destination:
            host: service-lol
            port:
              number: 80

    - match:
        - uri:
            exact: /logs
      route:
        - destination:
            host: service-lol
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      directResponse:
        status: 404
        body:
          string: "{\"error\": \"Not Found\"}"
